# chessboard

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
assets/shaders/: quad.frag  quad.vert  test.frag.glsl  test.vert.glsl
src/: CMakeLists.txt  chess.cpp  chess.hpp  common.hpp  gamestate.cpp  gamestate.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
